--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -52,6 +52,7 @@ QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 RRTMGP = "a01a1ee8-cea4-48fc-987c-fc7878d79da1"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReportMetrics = "c1654acf-408b-4272-96ce-66c258df8a6c"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 RootSolvers = "7181ea78-2dcb-4de3-ab41-2b8ab5a31e74"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
