--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -46,6 +46,7 @@ steps:
 
       - label: ":computer: baroclinic wave (ρe_tot) high resolution"
         command:
+          - mkdir longrun_bw_rhoe_highres
           - ": > longrun_bw_rhoe_highres/print-out-0.log" 
           - tail -F longrun_bw_rhoe_highres/print-out-0.log & # print log in background
           - srun --output=longrun_bw_rhoe_highres/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_bw_rhoe_highres.yml
@@ -60,6 +61,7 @@ steps:
 
       - label: ":computer: no lim ARS baroclinic wave (ρe_tot) equilmoist high resolution"
         command:
+          - mkdir longrun_bw_rhoe_equil_highres
           - ": > longrun_bw_rhoe_equil_highres/print-out-0.log" 
           - tail -F longrun_bw_rhoe_equil_highres/print-out-0.log & # print log in background
           - srun --output=longrun_bw_rhoe_equil_highres/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_bw_rhoe_equil_highres.yml
@@ -74,6 +76,7 @@ steps:
 
       - label: ":computer: lim ARS zalesak baroclinic wave (ρe_tot) equilmoist high resolution"
         command:
+          - mkdir longrun_zalesak_tracer_energy_bw_rhoe_equil_highres
           - ": > longrun_zalesak_tracer_energy_bw_rhoe_equil_highres/print-out-0.log" 
           - tail -F longrun_zalesak_tracer_energy_bw_rhoe_equil_highres/print-out-0.log & # print log in background
           - srun --output=longrun_zalesak_tracer_energy_bw_rhoe_equil_highres/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_zalesak_tracer_energy_bw_rhoe_equil_highres.yml
@@ -89,6 +92,7 @@ steps:
 
       - label: ":computer: SSP baroclinic wave (ρe_tot) equilmoist high resolution centered diff"
         command:
+          - mkdir longrun_ssp_bw_rhoe_equil_highres
           - ": > longrun_ssp_bw_rhoe_equil_highres/print-out-0.log" 
           - tail -F longrun_ssp_bw_rhoe_equil_highres/print-out-0.log & # print log in background
           - srun --output=longrun_ssp_bw_rhoe_equil_highres/print-out-%t.log mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_ssp_bw_rhoe_equil_highres.yml"
@@ -103,6 +107,7 @@ steps:
 
       - label: ":computer: SSP 1st-order tracer & energy upwind equilmoist baroclinic wave (ρe_tot) high resolution"
         command:
+          - mkdir longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres
           - ": > longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres/print-out-0.log" 
           - tail -F longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres/print-out-0.log & # print log in background
           - srun --output=longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres.yml
@@ -117,6 +122,7 @@ steps:
 
       - label: ":computer: SSP 3rd-order tracer & energy upwind equilmoist baroclinic wave (ρe_tot) high resolution"
         command:
+          - mkdir longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres
           - ": > longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres/print-out-0.log" 
           - tail -F longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres/print-out-0.log & # print log in background
           - srun --output=longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres.yml
@@ -131,6 +137,7 @@ steps:
 
       - label: ":computer: held suarez (ρe_tot) high resolution hightop"
         command:
+          - mkdir longrun_hs_rhoe_highres_hightop
           - ": > longrun_hs_rhoe_highres_hightop/print-out-0.log" 
           - tail -F longrun_hs_rhoe_highres_hightop/print-out-0.log & # print log in background
           - srun --output=longrun_hs_rhoe_highres_hightop/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_highres_hightop.yml
@@ -145,6 +152,7 @@ steps:
 
       - label: ":computer: no lim ARS held suarez (ρe_tot) equilmoist high resolution"
         command:
+          - mkdir longrun_hs_rhoe_equil_highres
           - ": > longrun_hs_rhoe_equil_highres/print-out-0.log" 
           - tail -F longrun_hs_rhoe_equil_highres/print-out-0.log & # print log in background
           - srun --output=longrun_hs_rhoe_equil_highres/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equil_highres.yml
@@ -159,6 +167,7 @@ steps:
 
       - label: ":computer: lim ARS zalesak held suarez (ρe_tot) equilmoist high resolution"
         command:
+          - mkdir longrun_zalesak_tracer_energy_hs_rhoe_equil_highres
           - ": > longrun_zalesak_tracer_energy_hs_rhoe_equil_highres/print-out-0.log" 
           - tail -F longrun_zalesak_tracer_energy_hs_rhoe_equil_highres/print-out-0.log & # print log in background
           - srun --output=longrun_zalesak_tracer_energy_hs_rhoe_equil_highres/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_zalesak_tracer_energy_hs_rhoe_equil_highres.yml
@@ -174,6 +183,7 @@ steps:
 
       - label: ":computer: no lim ARS aquaplanet (ρe_tot) equilmoist high resolution clearsky radiation Float64"
         command:
+          - mkdir longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64
           - ": > longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64/print-out-0.log" 
           - tail -F longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64/print-out-0.log & # print log in background
           - srun --output=longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64.yml
@@ -188,6 +198,7 @@ steps:
 
       - label: ":computer: lim ARS zalesak aquaplanet (ρe_tot) equilmoist high resolution clearsky radiation Float64"
         command:
+          - mkdir longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64
           - ": > longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64/print-out-0.log" 
           - tail -F longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64/print-out-0.log & # print log in background
           - srun --output=longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64.yml
@@ -203,6 +214,7 @@ steps:
 
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution hightop rayleigh sponge(30e3, 10)"
         command:
+          - mkdir longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3
           - ": > longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3/print-out-0.log" 
           - tail -F longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3/print-out-0.log & # print log in background
           - srun --output=longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3.yml
@@ -217,6 +229,7 @@ steps:
 
       - label: ":computer: aquaplanet (ρe_tot) equilmoist clearsky high resolution hightop rayleigh sponge(35e3, 10) Float64"
         command:
+          - mkdir longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64
           - ": > longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64/print-out-0.log" 
           - tail -F longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64/print-out-0.log & # print log in background
           - srun --output=longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equilmoist_clearsky_highres_hightop_rayleigh35e3_ft64.yml
@@ -231,6 +244,7 @@ steps:
       
       - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution topography (earth)"
         command:
+          - mkdir longrun_bw_rhoe_equil_highres_topography
           - ": > longrun_bw_rhoe_equil_highres_topography/print-out-0.log" 
           - tail -F longrun_bw_rhoe_equil_highres_topography/print-out-0.log & # print log in background
           - srun --output=longrun_bw_rhoe_equil_highres_topography/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_bw_rhoe_equil_highres_topography_earth.yml
@@ -245,6 +259,7 @@ steps:
 
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution topography (earth)"
         command:
+          - mkdir longrun_hs_rhoe_equil_highres_topography_earth
           - ": > longrun_hs_rhoe_equil_highres_topography_earth/print-out-0.log" 
           - tail -F longrun_hs_rhoe_equil_highres_topography_earth/print-out-0.log & # print log in background
           - srun --output=longrun_hs_rhoe_equil_highres_topography_earth/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equil_highres_topography_earth.yml
@@ -259,6 +274,7 @@ steps:
 
       - label: ":computer: no lim ARS aquaplanet (ρe_tot) equilmoist high resolution clearsky radiation Float64 (earth)"
         command:
+          - mkdir longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth
           - ": > longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth/print-out-0.log" 
           - tail -F longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth/print-out-0.log & # print log in background
           - srun --output=longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth.yml
@@ -301,6 +317,7 @@ steps:
 
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution monin obukhov"
         command:
+          - mkdir longrun_hs_rhoe_equil_highres_monin_obukhov
           - ": > longrun_hs_rhoe_equil_highres_monin_obukhov/print-out-0.log" 
           - tail -F longrun_hs_rhoe_equil_highres_monin_obukhov/print-out-0.log & # print log in background
           - srun --output=longrun_hs_rhoe_equil_highres_monin_obukhov/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equil_highres_monin_obukhov.yml
@@ -315,6 +332,7 @@ steps:
 
       - label: ":computer: aquaplanet (ρe_tot) equilmoist high resolution allsky radiation float64"
         command:
+          - mkdir longrun_aquaplanet_rhoe_equil_highres_allsky_ft64
           - ": > longrun_aquaplanet_rhoe_equil_highres_allsky_ft64/print-out-0.log" 
           - tail -F longrun_aquaplanet_rhoe_equil_highres_allsky_ft64/print-out-0.log & # print log in background
           - srun --output=longrun_aquaplanet_rhoe_equil_highres_allsky_ft64/print-out-%t.log julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equil_highres_allsky_ft64.yml
