Update default value of alpha_rayleigh_uh 	modified:   default_configs/default_config.yml Remove alpha_rayleigh_uh from config files where default value is used. 	modified:   longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64.yml 	modified:   longrun_aquaplanet_rhoe_equil_highres_allsky_ft64.yml 	modified:   longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64.yml 	modified:   longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth.yml 	modified:   longrun_bw_rhoe_equil_highres_topography_earth.yml 	modified:   longrun_hs_rhoe_equil_highres_topography_earth.yml 	modified:   longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3.yml 	modified:   longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64.yml 	modified:   config/model_configs/plane_agnesi_mountain_test_stretched.yml 	modified:   config/model_configs/plane_agnesi_mountain_test_uniform.yml 	modified:   config/model_configs/plane_schar_mountain_test_stretched.yml 	modified:   config/model_configs/plane_schar_mountain_test_uniform.yml 	modified:   config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric.yml 	modified:   config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res.yml 	modified:   config/model_configs/sphere_held_suarez_rhoe_equilmoist_hightop_sponge.yml 	modified:   config/model_configs/sphere_ssp_first_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge.yml Uses alpha_rayleigh_uh 0.0001 in the TRMM_LBA case 	modified:   model_configs/edmf_trmm.yml

--- a/config/default_configs/default_config.yml
+++ b/config/default_configs/default_config.yml
@@ -199,7 +199,7 @@ job_id:
   help: "Uniquely identifying string for a particular job"
   value: ~
 density_upwinding:
-  help: "Denisity upwinding mode [`none` (default), `first_order` , `third_order`, `boris_book`, `zalesak`]"
+  help: "Density upwinding mode [`none` (default), `first_order` , `third_order`, `boris_book`, `zalesak`]"
   value: none
 tracer_upwinding:
   help: "Tracer upwinding mode [`none` (default), `first_order` , `third_order`, `boris_book`, `zalesak`]"
@@ -252,7 +252,7 @@ alpha_rayleigh_w:
   value: 1.0
 alpha_rayleigh_uh:
   help: "Rayleigh sponge coefficient for horizontal velocity"
-  value: 0.0001
+  value: 0.0
 zd_viscous:
   help: "Viscous sponge height"
   value: 15000.0
