--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -415,83 +415,83 @@ steps:
           slurm_ntasks: 32
           slurm_time: 24:00:00
 
-      - label: ":computer: held suarez (ρe) equilmoist dt_y = 0"
-        command: >
-          srun julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_1.yml
+      # - label: ":computer: held suarez (ρe) equilmoist dt_y = 0"
+      #   command: >
+      #     srun julia --color=yes --project=examples examples/hybrid/driver.jl
+      #     --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_1.yml
 
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_held_suarez_rhoe_equilmoist_1
-          --out_dir sphere_held_suarez_rhoe_equilmoist_1
-        artifact_paths: "sphere_held_suarez_rhoe_equilmoist_1/*"
-        agents:
-          slurm_ntasks: 32
-          slurm_time: 24:00:00
+      #     julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
+      #     --data_dir sphere_held_suarez_rhoe_equilmoist_1
+      #     --out_dir sphere_held_suarez_rhoe_equilmoist_1
+      #   artifact_paths: "sphere_held_suarez_rhoe_equilmoist_1/*"
+      #   agents:
+      #     slurm_ntasks: 32
+      #     slurm_time: 24:00:00
 
-      - label: ":computer: held suarez (ρe) equilmoist dt_y = 32.5"
-        command: >
-          srun julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_2.yml
+      # - label: ":computer: held suarez (ρe) equilmoist dt_y = 32.5"
+      #   command: >
+      #     srun julia --color=yes --project=examples examples/hybrid/driver.jl
+      #     --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_2.yml
 
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_held_suarez_rhoe_equilmoist_2
-          --out_dir sphere_held_suarez_rhoe_equilmoist_2
-        artifact_paths: "sphere_held_suarez_rhoe_equilmoist_2/*"
-        agents:
-          slurm_ntasks: 32
-          slurm_time: 24:00:00
+      #     julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
+      #     --data_dir sphere_held_suarez_rhoe_equilmoist_2
+      #     --out_dir sphere_held_suarez_rhoe_equilmoist_2
+      #   artifact_paths: "sphere_held_suarez_rhoe_equilmoist_2/*"
+      #   agents:
+      #     slurm_ntasks: 32
+      #     slurm_time: 24:00:00
 
-      - label: ":computer: held suarez (ρe) equilmoist dt_y = 100"
-        command: >
-          srun julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_3.yml
+      # - label: ":computer: held suarez (ρe) equilmoist dt_y = 100"
+      #   command: >
+      #     srun julia --color=yes --project=examples examples/hybrid/driver.jl
+      #     --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_3.yml
 
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_held_suarez_rhoe_equilmoist_3
-          --out_dir sphere_held_suarez_rhoe_equilmoist_3
-        artifact_paths: "sphere_held_suarez_rhoe_equilmoist_3/*"
-        agents:
-          slurm_ntasks: 32
-          slurm_time: 24:00:00
-      - label: ":computer: held suarez (ρe) equilmoist dt_y = 150"
+      #     julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
+      #     --data_dir sphere_held_suarez_rhoe_equilmoist_3
+      #     --out_dir sphere_held_suarez_rhoe_equilmoist_3
+      #   artifact_paths: "sphere_held_suarez_rhoe_equilmoist_3/*"
+      #   agents:
+      #     slurm_ntasks: 32
+      #     slurm_time: 24:00:00
+      # - label: ":computer: held suarez (ρe) equilmoist dt_y = 150"
 
-        command: >
-          srun julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_4.yml
+      #   command: >
+      #     srun julia --color=yes --project=examples examples/hybrid/driver.jl
+      #     --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_4.yml
 
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_held_suarez_rhoe_equilmoist_4
-          --out_dir sphere_held_suarez_rhoe_equilmoist_4
-        artifact_paths: "sphere_held_suarez_rhoe_equilmoist_4/*"
-        agents:
-          slurm_ntasks: 32
-          slurm_time: 24:00:00
+      #     julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
+      #     --data_dir sphere_held_suarez_rhoe_equilmoist_4
+      #     --out_dir sphere_held_suarez_rhoe_equilmoist_4
+      #   artifact_paths: "sphere_held_suarez_rhoe_equilmoist_4/*"
+      #   agents:
+      #     slurm_ntasks: 32
+      #     slurm_time: 24:00:00
 
-      - label: ":computer: held suarez (ρe) equilmoist dt_y = 200"
-        command: >
-          srun julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_5.yml
+      # - label: ":computer: held suarez (ρe) equilmoist dt_y = 200"
+      #   command: >
+      #     srun julia --color=yes --project=examples examples/hybrid/driver.jl
+      #     --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_5.yml
 
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_held_suarez_rhoe_equilmoist_5
-          --out_dir sphere_held_suarez_rhoe_equilmoist_5
-        artifact_paths: "sphere_held_suarez_rhoe_equilmoist_5/*"
-        agents:
-          slurm_ntasks: 32
-          slurm_time: 24:00:00
+      #     julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
+      #     --data_dir sphere_held_suarez_rhoe_equilmoist_5
+      #     --out_dir sphere_held_suarez_rhoe_equilmoist_5
+      #   artifact_paths: "sphere_held_suarez_rhoe_equilmoist_5/*"
+      #   agents:
+      #     slurm_ntasks: 32
+      #     slurm_time: 24:00:00
 
-      - label: ":computer: held suarez (ρe) equilmoist dt_y = 500"
-        command: >
-          srun julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_6.yml
+      # - label: ":computer: held suarez (ρe) equilmoist dt_y = 500"
+      #   command: >
+      #     srun julia --color=yes --project=examples examples/hybrid/driver.jl
+      #     --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_6.yml
 
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_held_suarez_rhoe_equilmoist_6
-          --out_dir sphere_held_suarez_rhoe_equilmoist_6
-        artifact_paths: "sphere_held_suarez_rhoe_equilmoist_6/*"
-        agents:
-          slurm_ntasks: 32
-          slurm_time: 24:00:00
+      #     julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
+      #     --data_dir sphere_held_suarez_rhoe_equilmoist_6
+      #     --out_dir sphere_held_suarez_rhoe_equilmoist_6
+      #   artifact_paths: "sphere_held_suarez_rhoe_equilmoist_6/*"
+      #   agents:
+      #     slurm_ntasks: 32
+      #     slurm_time: 24:00:00
       # - label: ":computer: Diagnostic DCMIP200 surface elevation spectra"
       #   command: >
       #     julia --color=yes --project=examples examples/hybrid/driver.jl
