--- a/config/longrun_configs/longrun_bw_rhoe_highres.yml
+++ b/config/longrun_configs/longrun_bw_rhoe_highres.yml
@@ -8,3 +8,12 @@ kappa_4_tracer: 1.0e16
 z_elem: 45
 dt: "400secs"
 job_id: "longrun_bw_rhoe_highres"
+diagnostics:
+  - short_name: pfull
+    period: 1days
+  - short_name: wa
+    period: 1days
+  - short_name: va
+    period: 1days
+  - short_name: rv
+    period: 1days
